--- a/cirrusmd-detections/local_account_added.yml
+++ b/cirrusmd-detections/local_account_added.yml
@@ -1,6 +1,6 @@
 title: Local Account Added Linux
 description: Query all instances of local accounts being Linux.
-author: 
+author: Austin Songer
 date: 
 modified: 
 mitre:
